--- a/scss/all-blocks/_all-blocks.scss
+++ b/scss/all-blocks/_all-blocks.scss
@@ -4,9 +4,13 @@
 @import "nav";
 @import "hero";
 @import "start-form";
+@import "about";
+@import "implement";
 @import "design";
 @import "benefits";
 @import "pricing";
+@import "about-us";
 @import "contact";
 @import "start";
+@import "socials";
 @import "footer";
